#
# some news ... see also TODO for hints
#


2021-06-13 -> ## repo stuff
              a lot of documentation adds
	      add gnumeric sheet of measured temp values

              ## libhelper && amtrack stuff
	      add correction values for the measured temperatures

	      ## sensor_pi stuff
	      add missing NEWLINE

2021-06-12 -> ## target stuff
	      regular void-linux updates
	      add xfce and xorg to the image (!)
	      add midori to image
	      add binfmt-support, dcron and activate via ruint
	      add cronutils and gkt2-engines
	      add user ambient for database location (and more)
	      add lighttp and php-cgi stuff
	      update kernel to 5.10.42
	      let all runit log use group ambient instead of users
	      add user baalue to group ambient

	      ## repo stuff
	      some documentation adds
	      start preparing PI-ENV_V0.0.2

	      ## libhelper stuff
	      change location of ambient_data.db

2021-06-10 -> ## lcd2004_i2c && sensor_pi stuff
              fix missing NEWLINES

              ## database stuff
              add skeleton for tool to readout the database content

              ## readout_db
              add skeleton

2021-06-09 -> ## lcd2004_i2c && sensor_pi stuff
              extend error reporting (see also TODO)

              ## amtrack stuff
	      add content to database

	      ## target stuff
	      regular void-linux updates

2021-06-08 -> ## database stuff
              change format of database -> date is the PRIMARY KEY

              ## amtrack
              add first real measured data to the database

2021-06-07 -> ## amtrack && repo stuff
              add some first code content for sqlite handling
              change init screen layout to default again

              ## lcd2004_i2c && sensor_pi stuff
              add kdo argument to become a daemon

              ## target stuff
	      activate sensor_daemon and lcd_daemon via runit

2021-06-06 -> ## amtrack && repo stuff