@@ -110,9 +110,9 @@ struct lcd_request {
 #define SENSOR_UPDATE_TIME 60
 
 /* temperature correction values */
-#define CORRECT_EXT -2
-#define CORRECT_BARO -9
-#define CORRECT_ONBOARD -8
+#define CORRECT_EXT -1
+#define CORRECT_BARO -8
+#define CORRECT_ONBOARD -7
 
 /* sensor-pi specific defines */
 struct sensor_data {
